--- a/package.json
+++ b/package.json
@@ -48,13 +48,19 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.23.0",
+    "dotenv": "^4.0.0",
+    "knex": "^0.13.0",
     "koa": "^2.2.0",
+    "koa-router": "^7.2.0",
     "koa-static": "^3.0.0",
     "material-ui": "^0.18.1",
+    "mssql": "^4.0.4",
+    "pg": "^6.2.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "sequelize": "^3.30.4"
   }
 }
