--- a/package.json
+++ b/package.json
@@ -61,6 +61,6 @@
     "react-redux": "^5.0.5",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
-    "sequelize": "^3.30.4"
+    "sphinx-container": "git+https://github.com/VnValley/es6-container.git"
   }
 }
