--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start:client": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "clear": "rimraf public",
-    "build": "npm run clear && webpack -p",
+    "build": "webpack -p",
     "start": "node index.js ",
-    "test": "mocha --compilers js:babel-core/register ./test/test_helper.js --recursive ./test",
-    "test:watch": "npm run test -- --watch"
+    "build-w": "webpack -w",
+    "test": "jest"
   },
   "engines": {
     "node": "7.10.0"
@@ -17,55 +17,53 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-loader": "^7.0.0",
-    "babel-preset-env": "^1.5.1",
-    "chai": "^3.5.0",
-    "chai-jquery": "^2.0.0",
-    "chalk": "^1.1.3",
-    "css-loader": "^0.28.2",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
-    "gulp": "github:gulpjs/gulp#4.0",
-    "html-webpack-plugin": "^2.28.0",
-    "image-webpack-loader": "^3.3.1",
-    "jquery": "^3.2.1",
-    "jsdom": "^11.0.0",
-    "mocha": "^3.4.1",
-    "rimraf": "^2.6.1",
-    "style-loader": "^0.18.0",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.6.0",
-    "webpack-dev-server": "^2.4.5"
-  },
-  "dependencies": {
     "babel-core": "^6.24.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-regenerator": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-jest": "^20.0.3",
+    "babel-loader": "^7.0.0",
     "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.5.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-runtime": "^6.23.0",
+    "chalk": "^1.1.3",
+    "css-loader": "^0.28.2",
+    "dotenv": "^4.0.0",
+    "enzyme": "^2.9.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.28.0",
+    "image-webpack-loader": "^3.3.1",
+    "jest": "^20.0.4",
+    "progress-bar-webpack-plugin": "^1.9.3",
+    "react-test-renderer": "^15.6.1",
+    "rimraf": "^2.6.1",
+    "style-loader": "^0.18.0",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.6.0",
+    "webpack-dev-server": "^2.4.5",
+    "webpack-node-externals": "^1.6.0"
+  },
+  "dependencies": {
     "bluebird": "latest",
     "cheerio": "^1.0.0-rc.1",
-    "dotenv": "^4.0.0",
     "knex": "^0.13.0",
     "koa": "^2.2.0",
     "koa-bodyparser": "^4.2.0",
+    "koa-nunjucks-2": "^3.0.2",
     "koa-router": "^7.2.0",
     "koa-static": "^3.0.0",
     "material-ui": "^0.18.1",
-    "mssql": "^4.0.4",
     "pg": "^6.2.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
+    "react-router-config": "^1.0.0-beta.3",
+    "react-router-dom": "^4.1.2",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
-    "request": "latest",
-    "sphinx-container": "git://github.com/VnValley/es6-container.git#v2.0"
+    "request": "latest"
   }
 }
