--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-router-dom": "^4.1.2",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "redux-form": "^7.0.1",
     "request": "latest"
   }
 }
