--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "babel-core": "^6.24.1",
     "babel-jest": "^20.0.3",
     "babel-loader": "^7.0.0",
-    "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.5.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
@@ -47,6 +46,7 @@
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "bluebird": "latest",
     "cheerio": "^1.0.0-rc.1",
     "knex": "^0.13.0",
@@ -66,6 +66,6 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-form": "^7.0.1",
-    "request": "latest"
+    "request": "^2.81.0"
   }
 }
