--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-form": "^7.0.1",
+    "redux-logger": "^3.0.6",
     "request": "^2.81.0"
   }
 }
