--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
-    "bluebird": "latest",
+    "bluebird": "^3.5.0",
     "cheerio": "^1.0.0-rc.1",
     "knex": "^0.13.0",
     "koa": "^2.2.0",
