--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "pg": "^6.2.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-helmet": "^5.1.3",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.2",
     "react-router-config": "^1.0.0-beta.3",
