--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-router": "^4.1.2",
     "react-router-config": "^1.0.0-beta.3",
     "react-router-dom": "^4.1.2",
+    "react-router-redux": "^4.0.8",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-form": "^7.0.1",
